# rus-anonymizer

./: .gitignore  CONFIG_USAGE.md  README.md  anonymize.py  config.env.example  generate_dataset.py  pyproject.toml  requirements-deeppavlov.txt  requirements.txt
anonymizers/: base.py
anonymizers/deeppavlov_ner/: deeppavlov_anonymizer.py
anonymizers/hybrid_advanced/: hybrid_anonymizer.py
anonymizers/natasha_enhanced/: enhanced_natasha.py
anonymizers/regexp_baseline/: __init__.py  regexp_anonymizer.py
anonymizers/spacy_extended/: spacy_anonymizer.py
anonymizers/transformers_bert/: bert_anonymizer.py
automation/: README.md  analyze_quality.sh  annotate_dataset.sh  generate_dataset.sh  validate_dataset.sh
data/processed/: merged_dataset.json  train_dataset.json  val_dataset.json
data/reports/: merged_dataset_DeepPavlov_metrics.csv  merged_dataset_Hybrid_Advanced_metrics.csv  merged_dataset_Natasha_Enhanced_metrics.csv  (+4 more)
debug/: dev.py
docs/: CONFIG_USAGE.md  README.md  USAGE.md
docs/reference/: MODELS.md  (+3 more)
scripts/: README.md  __init__.py  analyze_annotation_quality.py  annotate_llama_dataset.py  config_loader.py  data_processor.py  dataset_config.py  dataset_openai_generator.py  dataset_prompts.py  generate_dataset.py  merge_datasets.py  validate_deeppavlov.py  validate_simple.py
tests/: test_data_processor.py  test_dataset-extended.json  test_dataset.json  test_dataset_generator.py  test_metrics.py  test_pd_detection.py  validate_deeppavlov_improved.py  validate_simple.py
utils/: data_processor.py  metadata_utils.py  metrics.py  split_dataset.py
(+7 files in other folders)
