[project]
name = "anonymizer"
version = "0.1.0"
description = ""
authors = [
    {name = "JohnConnor123",email = "ivevdokimov@miem.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "scipy (==1.10.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "deeppavlov (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
